# pthread-emb-ps3

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake.in  meson.build  meson_options.txt  ps3-ppu.txt  ps3-spu.txt  ps3.txt  pthread-atfork.c  pthread.pc  pthread_join.c  rename_files.sh
platform/psl1ght/: Makefile  Makefile.tests  psl1ght_osal.h
ps3-sample/: .gitignore  CMakeLists.txt  Makefile  Makefile.old  compile.sh  main.c  main.cpp  meson.build  ps3.txt
src/platform/psl1ght/: Makefile  psl1ght_osal.c  pthread.pc  pthread.pc.in
